--- a/internal/tscode/loaders.tmpl
+++ b/internal/tscode/loaders.tmpl
@@ -1,6 +1,6 @@
 {{reserveImport "./const" "NodeType" }}
 {{ reserveImport .Package.PackagePath "ObjectLoaderFactory" }}
-{{ reserveImport .Package.SchemaPackagePath "getTransformedReadClause" "getObjectLoaderProperties"}}
+{{ reserveImport .Package.SchemaPackagePath "getObjectLoaderProperties"}}
 
 {{ range .Schema.Nodes -}}
 {{ with .NodeData}}
@@ -25,7 +25,7 @@
         key: {{.Pkey}},
         {{ if .AddTransformedClause -}}
           {{ reserveDefaultImport $nodeData.GetSchemaPath $nodeData.Node -}}
-          ... {{useImport "getObjectLoaderProperties"}}({{useImport $nodeData.Node}}),
+          ... {{useImport "getObjectLoaderProperties"}}({{useImport $nodeData.Node}}, {{$table}}),
         {{ end -}}
       });
     {{end}}
