generate overrideInput which is different from updateInput
updateInput just updates the given keys. overrideInput changes the input completely with what was given

--- a/internal/tscode/builder.tmpl
+++ b/internal/tscode/builder.tmpl
@@ -83,6 +83,10 @@ export class {{$builder}} implements {{useImport "Builder"}}<{{$node}}> {
     };
   }
 
+  overrideInput(input: {{.Node}}Input) {
+    this.input = input;
+  }
+
   // store data in Builder that can be retrieved by another validator, trigger, observer later in the action
   storeData(k: string, v: any) {
     this.m.set(k, v);
