--- a/internal/tscode/builder.tmpl
+++ b/internal/tscode/builder.tmpl
@@ -83,8 +83,8 @@ export class {{$builder}} implements {{useImport "Builder"}}<{{$node}}> {
     };
   }
 
-  overrideInput(input: {{.Node}}Input) {
-    this.input = input;
+  deleteInputKey(key: string) {
+    delete this.input[key];
   }
 
   // store data in Builder that can be retrieved by another validator, trigger, observer later in the action
