change type of arg to deleteInputKey
typescript doesn't like `string` here so changing to `keyof FooInput`

--- a/internal/tscode/builder.tmpl
+++ b/internal/tscode/builder.tmpl
@@ -83,7 +83,7 @@ export class {{$builder}} implements {{useImport "Builder"}}<{{$node}}> {
     };
   }
 
-  deleteInputKey(key: string) {
+  deleteInputKey(key: keyof {{.Node}}Input) {
     delete this.input[key];
   }
 
