ent-rsvp example

--- a/internal/graphql/ts_templates/index.tmpl
+++ b/internal/graphql/ts_templates/index.tmpl
@@ -22,7 +22,7 @@ app.use(
     return doWork();
   })
 );
-const server = app.listen(process.env.port || 4000);
+const server = app.listen(process.env.PORT || 4000);
 
 app.get("/healthz", async (req, res, params) => {
   try {
