s/privacyPolicy/getPrivacyPolicy in base class

--- a/internal/tscode/base.tmpl
+++ b/internal/tscode/base.tmpl
@@ -81,12 +81,14 @@ export class {{$baseClass}} {
       {{end -}}
     {{end}}
   }
-
-  {{ if $privacyCfg.Class }}
-    privacyPolicy: {{useImport "PrivacyPolicy"}} = new {{useImport $privacyCfg.PolicyName}}();
-  {{ else }}
-    privacyPolicy: {{useImport "PrivacyPolicy"}} = {{useImport $privacyCfg.PolicyName}};
-  {{ end }}
+  
+  getPrivacyPolicy(): {{useImport "PrivacyPolicy"}}<this> {
+    {{ if $privacyCfg.Class }}
+      return new {{useImport $privacyCfg.PolicyName}}();
+    {{ else }}
+      return {{useImport $privacyCfg.PolicyName}};
+    {{ end }}
+  }
 
   {{range $field := .FieldInfo.Fields -}}
     {{ if $field.HasAsyncAccessor $cfg -}}
