--- a/internal/tscode/ent_query_base.tmpl
+++ b/internal/tscode/ent_query_base.tmpl
@@ -6,6 +6,11 @@
 
 {{$schema := .Schema}}
 
+{{ $cfg := .Config }}
+{{$viewerInfo := $cfg.GetTemplatizedViewer -}}
+{{ reserveImport $viewerInfo.Path $viewerInfo.Name -}}
+{{$viewerType := useImport $viewerInfo.Name -}}
+
 {{with .Info -}}
 
   {{ range .Imports }} 
@@ -58,12 +63,19 @@
     {{ reserveImport $importPath $edge.TsEdgeQueryEdgeName -}}
     {{$edgeName := useImport $edge.TsEdgeQueryEdgeName -}}
     {{$destNode := useImport .NodeInfo.Node -}}
-    {{$thisType := printf "new (viewer: Viewer, src: EdgeQuerySource<%s, %s>) => T" $node $destNode}}
+    {{$srcNode := $node -}}
+    {{ if eq $srcNode "Ent" -}}
+      {{$srcNode = printf "%s<%s>" $srcNode $viewerType -}}
+    {{ end -}}
+    {{ if eq $destNode "Ent" -}}
+      {{$destNode = printf "%s<%s>" $destNode  $viewerType -}}
+    {{ end -}}
+    {{$thisType := printf "new (viewer: %s, src: EdgeQuerySource<%s, %s>) => T" $viewerType $srcNode $destNode}}
 
-  export abstract class {{$name}} extends {{useImport "AssocEdgeQueryBase"}}<{{$node}}, {{$destNode}}, {{$edgeName}}> {
+  export abstract class {{$name}} extends {{useImport "AssocEdgeQueryBase"}}<{{$srcNode}}, {{$destNode}}, {{$edgeName}}, {{$viewerType}}> {
     constructor(
-      viewer: {{useImport "Viewer"}}, 
-      src: {{useImport "EdgeQuerySource"}}<{{$node}}, {{$destNode}}>,
+      viewer: {{$viewerType}}, 
+      src: {{useImport "EdgeQuerySource"}}<{{$srcNode}}, {{$destNode}}, {{$viewerType}}>,
     ) {
       super(
         viewer, 
@@ -80,14 +92,14 @@
 
     static query<T extends {{$name}}>(
       this: {{$thisType}},
-      viewer: {{useImport "Viewer"}},
-      src: {{useImport "EdgeQuerySource"}}<{{$node}}, {{$destNode}}>,
+      viewer: {{$viewerType}},
+      src: {{useImport "EdgeQuerySource"}}<{{$srcNode}}, {{$destNode}}>,
     ): T {
       return new this(viewer, src);
     }
 
     {{ if $sourcePolymorphic -}}
-      protected abstract getSourceLoadEntOptions(): {{useImport "LoadEntOptions"}}<{{useImport "Ent"}}>;
+      protected abstract getSourceLoadEntOptions(): {{useImport "LoadEntOptions"}}<{{useImport "Ent"}}<{{$viewerType}}>, {{$viewerType}}>;
     {{ end }}
 
     sourceEnt(id: {{useImport "ID"}}) {
@@ -117,19 +129,25 @@
     {{$node := useImport $edge.GetNodeInfo.Node -}}
     {{$srcPoly := $edge.SourceIsPolymorphic -}}
     {{$srcType := printf "%s | %s " $srcNode (useImport "ID") }}
+    {{ if eq $srcNode "Ent" -}}
+      {{$srcNode = printf "%s<%s>" $srcNode $viewerType -}}
+    {{ end -}}
+    {{ if eq $node "Ent" -}}
+      {{$node = printf "%s<%s>" $node  $viewerType -}}
+    {{ end -}}
     {{ if $srcPoly -}}
       {{$srcType = $srcNode }}
     {{ end -}}
 
-    {{$thisType := printf "new (viewer: Viewer, src: %s  ) => T" $srcType }}
+    {{$thisType := printf "new (viewer: %s, src: %s  ) => T" $viewerType $srcType }}
 
-    export class {{$name}} extends {{useImport "CustomEdgeQueryBase"}}<{{$srcNode}}, {{$node}}> {
+    export class {{$name}} extends {{useImport "CustomEdgeQueryBase"}}<{{$srcNode}}, {{$node}}, {{$viewerType}}> {
     {{ if $srcPoly -}}
-      constructor(viewer: {{useImport "Viewer"}}, private srcEnt: {{$srcType }}) {
+      constructor(viewer: {{$viewerType}}, private srcEnt: {{$srcType }}) {
         super(viewer, {
           src: srcEnt, 
     {{ else -}}
-      constructor(viewer: {{useImport "Viewer"}}, src: {{$srcType }}) {
+      constructor(viewer: {{$viewerType}}, src: {{$srcType }}) {
         super(viewer, {
           src: src, 
     {{ end -}}
@@ -141,7 +159,7 @@
 
       static query<T extends {{$name}}>(
         this: {{$thisType}},
-        viewer: {{useImport "Viewer"}},
+        viewer: {{$viewerType}},
         src: {{$srcType}},
       ): T {
         return new this(viewer, src);
