--- a/internal/tscode/loadAny.tmpl
+++ b/internal/tscode/loadAny.tmpl
@@ -21,7 +21,7 @@ export async function loadEntXByType(
   return {{useImport "loadEntX"}}(viewer, id, getLoaderOptions(type));
 }
 
-export function getLoaderOptions(type: {{useImport "NodeType"}}): {{useImport "LoadEntOptions"}}<{{useImport "Ent"}}> {
+export function getLoaderOptions(type: {{useImport "NodeType"}}): {{useImport "LoadEntOptions"}}<{{useImport "Ent"}}, any> {
   switch (type) {
   {{ range .NodeData -}}
     case {{useImport "NodeType"}}.{{.Name}}:
