--- a/internal/graphql/ts_templates/field_config.tmpl
+++ b/internal/graphql/ts_templates/field_config.tmpl
@@ -1,6 +1,11 @@
 {{$fieldConfig := .FieldConfig -}}
 {{$baseObj := .Base -}}
 
+{{ $cfg := .Config -}}
+{{$viewerInfo := $cfg.GetTemplatizedViewer -}}
+{{ reserveImport $viewerInfo.Path $viewerInfo.Name -}}
+{{$viewerType := useImport $viewerInfo.Name -}}
+
 {{$prefix := printf "const %s" $fieldConfig.Name -}}
 {{ if $fieldConfig.Exported -}}
   {{$prefix = printf "export %s" $prefix -}}
@@ -20,25 +25,25 @@
 {{$prefix}}: {{useImport "GraphQLFieldConfig"}}<
   undefined,
   {{ if ne $fieldConfig.Arg "" -}}
-    {{useImport "RequestContext"}},
+    {{useImport "RequestContext"}}<{{$viewerType}}>,
     {{$fieldConfig.Arg}}
   {{ else }}
-    {{useImport "RequestContext"}}
+    {{useImport "RequestContext"}}<{{$viewerType}}>
   {{ end -}}
 > = {
   type: {{$fieldConfig.FieldType}},
   {{ template "render_args.tmpl" (dict "Base" $baseObj "Args" $fieldConfig.Args) -}}
   {{if $fieldConfig.ReturnTypeHint -}}
     {{ if $fieldConfig.ResolveMethodArg -}}
-      resolve: async (_source, {{$fieldConfig.ResolveMethodArg}}, context:{{useImport "RequestContext"}}, _info: {{useImport "GraphQLResolveInfo"}}): {{$fieldConfig.ReturnTypeHint}} => {
+      resolve: async (_source, {{$fieldConfig.ResolveMethodArg}}, context:{{useImport "RequestContext"}}<{{$viewerType}}>, _info: {{useImport "GraphQLResolveInfo"}}): {{$fieldConfig.ReturnTypeHint}} => {
     {{ else -}}
-      resolve: async (_source, args: {{$fieldConfig.Arg}}, context:{{useImport "RequestContext"}}, _info: {{useImport "GraphQLResolveInfo"}}): {{$fieldConfig.ReturnTypeHint}} => {
+      resolve: async (_source, args: {{$fieldConfig.Arg}}, context:{{useImport "RequestContext"}}<{{$viewerType}}>, _info: {{useImport "GraphQLResolveInfo"}}): {{$fieldConfig.ReturnTypeHint}} => {
     {{end -}}
   {{ else -}}
     {{ if $fieldConfig.ResolveMethodArg -}}
-      resolve: async (_source, {{$fieldConfig.ResolveMethodArg}}, context:{{useImport "RequestContext"}}, _info: {{useImport "GraphQLResolveInfo"}}) => {
+      resolve: async (_source, {{$fieldConfig.ResolveMethodArg}}, context:{{useImport "RequestContext"}}<{{$viewerType}}>, _info: {{useImport "GraphQLResolveInfo"}}) => {
     {{else -}}
-      resolve: async (_source, args: {{$fieldConfig.Arg}}, context:{{useImport "RequestContext"}}, _info: {{useImport "GraphQLResolveInfo"}}) => {
+      resolve: async (_source, args: {{$fieldConfig.Arg}}, context:{{useImport "RequestContext"}}<{{$viewerType}}>, _info: {{useImport "GraphQLResolveInfo"}}) => {
     {{end -}}
   {{ end -}}
     {{range $line := $fieldConfig.FunctionContents -}}
