--- a/internal/graphql/ts_templates/object.tmpl
+++ b/internal/graphql/ts_templates/object.tmpl
@@ -1,8 +1,9 @@
 {{reserveImport "graphql" "GraphQLSchema" "GraphQLObjectType" "GraphQLInputObjectType" "GraphQLID" "GraphQLString" "GraphQLEnumType" "GraphQLNonNull" "GraphQLList" "GraphQLFloat" "GraphQLInt" "GraphQLFieldConfig" "GraphQLFieldConfigMap" "GraphQLResolveInfo" "GraphQLInputFieldConfigMap" "GraphQLBoolean" "GraphQLUnionType" }}
-{{reserveImport .Package.PackagePath "ID" "RequestContext" }}
-{{reserveImport .Package.GraphQLPackagePath "GraphQLTime" "GraphQLNodeInterface" "GraphQLEdgeInterface" "GraphQLConnectionInterface" "nodeIDEncoder" "resolveID" "mustDecodeIDFromGQLID" "encodeGQLID" }}
+{{ $cfg := .Config -}}
+{{$baseObj := .Data -}}
 
-{{$baseObj := . -}}
+{{reserveImport $baseObj.Package.PackagePath "ID" "RequestContext" }}
+{{reserveImport $baseObj.Package.GraphQLPackagePath "GraphQLTime" "GraphQLNodeInterface" "GraphQLEdgeInterface" "GraphQLConnectionInterface" "nodeIDEncoder" "resolveID" "mustDecodeIDFromGQLID" "encodeGQLID" }}
 
 {{/* import types that we may need e.g. UserType, ContactType, etc */}}
 {{ range $baseObj.Imports -}} 
@@ -19,13 +20,13 @@
 
 {{ template "interfaces.tmpl" (dict "Base" $baseObj "Interfaces" $baseObj.TSInterfaces) -}}
 
-{{ range .Enums -}}
+{{ range $baseObj.Enums -}}
   {{ template "enum.tmpl" . -}}
 {{ end -}}
 
-{{$nodeInstance := .NodeInstance}}
+{{$nodeInstance := $baseObj.NodeInstance}}
 
-{{ range $gqlNode := .GQLNodes -}}
+{{ range $gqlNode := $baseObj.GQLNodes -}}
   {{if eq $gqlNode.GQLType "GraphQLUnionType" -}}
     const {{$gqlNode.Type}} = new {{useImport "GraphQLUnionType"}}({
       name: "{{$gqlNode.Node}}",
@@ -72,6 +73,6 @@
   {{end}}
 {{end}}
 
-{{ if .FieldConfig}}
-  {{ template "field_config.tmpl" (dict "Base" $baseObj "FieldConfig" .FieldConfig) -}}
+{{ if $baseObj.FieldConfig}}
+  {{ template "field_config.tmpl" (dict "Base" $baseObj "FieldConfig" $baseObj.FieldConfig "Config" $cfg) -}}
 {{ end -}}
